fix: gregorian dates, compressed timelines (C:3-4wk D:+1wk E:4-5wk), RTL mirror all SVG charts

--- a/next-steps.html
+++ b/next-steps.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -50,20 +50,20 @@
               <tr>
                 <td><strong style="color:var(--color-pkg-c)">C</strong></td>
                 <td>وب‌سایت سفارشی + یکپارچه‌سازی CRM</td>
-                <td>۱۰ تا ۱۴ هفته</td>
-                <td>نیاز به کاتالوگ حرفه‌ای با مدیریت سرنخ</td>
+                <td>۳ تا ۴ هفته</td>
+                <td>نیاز به کاتالوگ حرفه‌ای با مدیریت سرنخ</td></td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-d)">D</strong></td>
                 <td>ربات تلگرام (افزونه C یا E)</td>
-                <td>+ ۳ تا ۴ هفته</td>
-                <td>تیم فروش محصولات را از موبایل مدیریت کند</td>
+                <td>+ ۱ هفته</td>
+                <td>تیم فروش محصولات را از موبایل مدیریت کند</td></td>
               </tr>
               <tr style="background:var(--color-pkg-e-light);">
                 <td><strong style="color:var(--color-pkg-e)">E</strong></td>
                 <td>اکوسیستم کامل: وب‌سایت + CRM + ربات + داشبورد</td>
-                <td>۱۴ تا ۲۰ هفته</td>
-                <td>ساخت برای مقیاس، عملیات یکپارچه، بلندمدت</td>
+                <td>۴ تا ۵ هفته</td>
+                <td>ساخت برای مقیاس، عملیات یکپارچه، بلندمدت</td></td>
               </tr>
             </tbody>
           </table>
@@ -83,7 +83,7 @@
             </button>
             <div class="accordion__content">
               <p>اگر باید ظرف ۳ هفته آنلاین شوید، فقط پکیج A مناسب است. اگر ۵ تا ۷ هفته وقت دارید،
-              B عملی می‌شود. برای C یا E، ۳ تا ۵ ماه شامل مراحل طراحی و تست برنامه‌ریزی کنید.</p>
+              B عملی می‌شود. برای C یا E، ۴ تا ۵ هفته شامل مراحل طراحی و تست برنامه‌ریزی کنید.</p>
               <p>زمان‌بندی فقط به سرعت توسعه بستگی ندارد — به سرعت ارائه داده محصول، تصاویر
               و تأییدیه‌ها توسط تیم شما در هر نقطه بازرسی نیز وابسته است.</p>
             </div>
@@ -204,9 +204,9 @@
       <div class="mt-xl" data-animate style="border-top:1px solid var(--color-border-light); padding-top:var(--space-l);">
         <div class="grid grid--2">
           <div>
-            <p class="caption"><strong>تاریخ تهیه پیشنهاد:</strong> بهمن ۱۴۰۴</p>
+            <p class="caption"><strong>تاریخ تهیه پیشنهاد:</strong> فوریه ۲۰۲۶</p>
             <p class="caption"><strong>نسخه:</strong> ۱.۰</p>
-            <p class="caption"><strong>معتبر تا:</strong> اسفند ۱۴۰۴</p>
+            <p class="caption"><strong>معتبر تا:</strong> مارس ۲۰۲۶</p>
           </div>
           <div>
             <p class="caption"><strong>صفحات این پیشنهاد:</strong></p>
@@ -226,7 +226,7 @@
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در فوریه ۲۰۲۶</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
