--- a/package-c.html
+++ b/package-c.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -76,7 +76,7 @@
           <table>
             <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">کنترل کامل بر هر ویژگی و المان طراحی</td><td class="accept">چرخه ساخت طولانی‌تر (۱۰ تا ۱۴ هفته)</td></tr>
+              <tr><td class="gain">کنترل کامل بر هر ویژگی و المان طراحی</td><td class="accept">چرخه ساخت طولانی‌تر (۳ تا ۴ هفته)</td></tr>
               <tr><td class="gain">بدون زنجیره وابستگی وردپرس/افزونه</td><td class="accept">سرمایه‌گذاری اولیه بالاتر</td></tr>
               <tr><td class="gain">یکپارچه‌سازی CRM جریان کاری متصل ایجاد می‌کند</td><td class="accept">CRM باید انتخاب و پیکربندی شود (پیش‌نیاز)</td></tr>
               <tr><td class="gain">لایه API یکپارچه‌سازی‌های آینده را ممکن می‌سازد</td><td class="accept">برای تغییرات ساختاری نیاز به توسعه‌دهنده دارد</td></tr>
@@ -90,19 +90,19 @@
       <div class="mt-l" data-animate>
         <h3>مراحل تحویل</h3>
         <ul class="phase-timeline">
-          <li><span class="phase-name">کشف و نیازسنجی</span><br><span class="phase-duration">۱ هفته</span></li>
-          <li><span class="phase-name">معماری اطلاعات و وایرفریم</span><br><span class="phase-duration">۱ هفته</span></li>
-          <li><span class="phase-name">طراحی بصری</span><br><span class="phase-duration">۱ تا ۲ هفته (۲ دور بازبینی)</span></li>
-          <li><span class="phase-name">توسعه بک‌اند (دیتابیس، API، پنل مدیریت)</span><br><span class="phase-duration">۳ تا ۴ هفته</span></li>
-          <li><span class="phase-name">توسعه فرانت‌اند</span><br><span class="phase-duration">۲ تا ۳ هفته (موازی با بک‌اند متأخر)</span></li>
-          <li><span class="phase-name">یکپارچه‌سازی CRM</span><br><span class="phase-duration">۱ تا ۲ هفته (وابسته به دسترسی CRM)</span></li>
-          <li><span class="phase-name">ورود محتوا و مهاجرت داده</span><br><span class="phase-duration">۱ تا ۲ هفته</span></li>
-          <li><span class="phase-name">تضمین کیفیت، عملکرد، بررسی امنیتی</span><br><span class="phase-duration">۱ تا ۲ هفته</span></li>
-          <li><span class="phase-name">بازبینی استیجینگ با مشتری</span><br><span class="phase-duration">۱ هفته</span></li>
-          <li><span class="phase-name">راه‌اندازی و تثبیت</span><br><span class="phase-duration">۱ هفته</span></li>
+          <li><span class="phase-name">کشف و نیازسنجی</span><br><span class="phase-duration">۲ روز</span></li>
+          <li><span class="phase-name">معماری اطلاعات و وایرفریم</span><br><span class="phase-duration">۲ روز</span></li>
+          <li><span class="phase-name">طراحی بصری</span><br><span class="phase-duration">۳ روز (۱ دور بازبینی)</span></li>
+          <li><span class="phase-name">توسعه بک‌اند (دیتابیس، API، پنل مدیریت)</span><br><span class="phase-duration">۵ تا ۷ روز</span></li>
+          <li><span class="phase-name">توسعه فرانت‌اند</span><br><span class="phase-duration">۴ تا ۵ روز (موازی با بک‌اند متأخر)</span></li>
+          <li><span class="phase-name">یکپارچه‌سازی CRM</span><br><span class="phase-duration">۳ تا ۴ روز (وابسته به دسترسی CRM)</span></li>
+          <li><span class="phase-name">ورود محتوا و مهاجرت داده</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">تضمین کیفیت، عملکرد، بررسی امنیتی</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">بازبینی استیجینگ با مشتری</span><br><span class="phase-duration">۲ روز</span></li>
+          <li><span class="phase-name">راه‌اندازی و تثبیت</span><br><span class="phase-duration">۲ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">۱۰–۱۴</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۳–۴</div><div class="stat-item__label">هفته مجموعاً</div></div>
         </div>
       </div>
 
@@ -149,7 +149,7 @@
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در فوریه ۲۰۲۶</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
