--- a/package-e.html
+++ b/package-e.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -99,7 +99,7 @@
           <table>
             <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">اکوسیستم کاملاً یکپارچه: یک ورود داده، همه‌جا به‌روز</td><td class="accept">طولانی‌ترین چرخه ساخت (۱۴ تا ۲۰ هفته)</td></tr>
+              <tr><td class="gain">اکوسیستم کاملاً یکپارچه: یک ورود داده، همه‌جا به‌روز</td><td class="accept">طولانی‌ترین چرخه ساخت (۴ تا ۵ هفته)</td></tr>
               <tr><td class="gain">بلوغ عملیاتی: ردیابی استعلام، پیگیری، تحلیل</td><td class="accept">بالاترین سرمایه‌گذاری اولیه</td></tr>
               <tr><td class="gain">مدیریت محصول موبایلی از طریق تلگرام</td><td class="accept">پیچیدگی سیستم نیاز به فرآیندهای مستند و مدیر اختصاصی دارد</td></tr>
               <tr><td class="gain">پایپلاین استعلام متصل به CRM</td><td class="accept">انتخاب و پیکربندی CRM یک پیش‌نیاز است</td></tr>
@@ -113,21 +113,21 @@
       <div class="mt-l" data-animate>
         <h3>مراحل تحویل</h3>
         <ul class="phase-timeline">
-          <li><span class="phase-name">کشف و معماری اکوسیستم</span><br><span class="phase-duration">۱ تا ۲ هفته</span></li>
-          <li><span class="phase-name">معماری اطلاعات و وایرفریم</span><br><span class="phase-duration">۱ هفته</span></li>
-          <li><span class="phase-name">طراحی بصری</span><br><span class="phase-duration">۱ تا ۲ هفته</span></li>
-          <li><span class="phase-name">بک‌اند: دیتابیس، API، پنل مدیریت</span><br><span class="phase-duration">۴ تا ۵ هفته</span></li>
-          <li><span class="phase-name">توسعه فرانت‌اند</span><br><span class="phase-duration">۳ تا ۴ هفته (موازی با بک‌اند متأخر)</span></li>
-          <li><span class="phase-name">یکپارچه‌سازی CRM: همگام‌سازی عمیق، پایپلاین، تحلیل</span><br><span class="phase-duration">۲ تا ۳ هفته</span></li>
-          <li><span class="phase-name">توسعه ربات تلگرام</span><br><span class="phase-duration">۲ تا ۳ هفته (موازی با CRM)</span></li>
-          <li><span class="phase-name">تست یکپارچه‌سازی: جریان داده سرتاسری</span><br><span class="phase-duration">۱ تا ۲ هفته</span></li>
-          <li><span class="phase-name">ورود محتوا و مهاجرت داده</span><br><span class="phase-duration">۱ تا ۲ هفته</span></li>
-          <li><span class="phase-name">تضمین کیفیت، عملکرد، امنیت</span><br><span class="phase-duration">۱ تا ۲ هفته</span></li>
-          <li><span class="phase-name">بازبینی استیجینگ با مشتری</span><br><span class="phase-duration">۱ هفته</span></li>
-          <li><span class="phase-name">راه‌اندازی و تثبیت</span><br><span class="phase-duration">۲ هفته</span></li>
+          <li><span class="phase-name">کشف و معماری اکوسیستم</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">معماری اطلاعات و وایرفریم</span><br><span class="phase-duration">۲ روز</span></li>
+          <li><span class="phase-name">طراحی بصری</span><br><span class="phase-duration">۳ تا ۴ روز</span></li>
+          <li><span class="phase-name">بک‌اند: دیتابیس، API، پنل مدیریت</span><br><span class="phase-duration">۷ تا ۸ روز</span></li>
+          <li><span class="phase-name">توسعه فرانت‌اند</span><br><span class="phase-duration">۵ تا ۶ روز (موازی با بک‌اند متأخر)</span></li>
+          <li><span class="phase-name">یکپارچه‌سازی CRM: همگام‌سازی عمیق، پایپلاین، تحلیل</span><br><span class="phase-duration">۴ تا ۵ روز</span></li>
+          <li><span class="phase-name">توسعه ربات تلگرام</span><br><span class="phase-duration">۳ تا ۴ روز (موازی با CRM)</span></li>
+          <li><span class="phase-name">تست یکپارچه‌سازی: جریان داده سرتاسری</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">ورود محتوا و مهاجرت داده</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">تضمین کیفیت، عملکرد، امنیت</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">بازبینی استیجینگ با مشتری</span><br><span class="phase-duration">۲ روز</span></li>
+          <li><span class="phase-name">راه‌اندازی و تثبیت</span><br><span class="phase-duration">۳ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">۱۴–۲۰</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۴–۵</div><div class="stat-item__label">هفته مجموعاً</div></div>
         </div>
       </div>
 
@@ -178,7 +178,7 @@
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در فوریه ۲۰۲۶</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
