--- a/responsibilities.html
+++ b/responsibilities.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -248,7 +248,7 @@
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در فوریه ۲۰۲۶</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
