--- a/compare.html
+++ b/compare.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -103,7 +103,7 @@
             <tr class="group-header" data-group="delivery">
               <td colspan="6"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="transition:transform 0.2s"><polyline points="6 9 12 15 18 9"/></svg> تحویل</td>
             </tr>
-            <tr class="group-row" data-group="delivery"><td>زمان‌بندی</td><td class="col-a">۲–۳ هفته</td><td class="col-b">۵–۷ هفته</td><td class="col-c">۱۰–۱۴ هفته</td><td class="col-d">۳–۴ هفته</td><td class="col-e">۱۴–۲۰ هفته</td></tr>
+            <tr class="group-row" data-group="delivery"><td>زمان‌بندی</td><td class="col-a">۲–۳ هفته</td><td class="col-b">۵–۷ هفته</td><td class="col-c">۳–۴ هفته</td><td class="col-d">+۱ هفته</td><td class="col-e">۴–۵ هفته</td></tr>
             <tr class="group-row" data-group="delivery"><td>فازهای طراحی</td><td class="col-a">۰</td><td class="col-b">۳</td><td class="col-c">۳</td><td class="col-d">۱</td><td class="col-e">۳</td></tr>
             <tr class="group-row" data-group="delivery"><td>مشارکت مشتری</td><td class="col-a">کم</td><td class="col-b">متوسط</td><td class="col-c">متوسط-بالا</td><td class="col-d">کم</td><td class="col-e">بالا</td></tr>
 
@@ -129,14 +129,26 @@
           <line x1="100" y1="20" x2="100" y2="280" stroke="#E0DFDC" stroke-width="1"/>
           <line x1="100" y1="280" x2="720" y2="280" stroke="#E0DFDC" stroke-width="1"/>
 
-          <rect x="130" y="240" width="80" height="40" rx="3" fill="#6B7280" opacity="0.85"/>
+          <!-- E — leftmost (tallest) -->
+          <rect x="130" y="40" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.35"/>
+          <text x="170" y="65" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">داشبورد</text>
+          <rect x="130" y="80" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.45"/>
+          <text x="170" y="105" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">ربات</text>
+          <rect x="130" y="120" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.55"/>
+          <text x="170" y="145" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">CRM عمیق</text>
+          <rect x="130" y="160" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.65"/>
+          <text x="170" y="185" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">پنل</text>
+          <rect x="130" y="200" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.75"/>
+          <text x="170" y="225" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">طراحی</text>
+          <rect x="130" y="240" width="80" height="40" rx="3" fill="#1A6B4E" opacity="0.85"/>
           <text x="170" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">وب‌سایت</text>
 
-          <rect x="250" y="200" width="80" height="40" rx="0" fill="#7C6E56" opacity="0.65"/>
-          <text x="290" y="225" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">طراحی</text>
-          <rect x="250" y="240" width="80" height="40" rx="3" fill="#7C6E56" opacity="0.85"/>
-          <text x="290" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">وب‌سایت</text>
+          <!-- D -->
+          <rect x="260" y="240" width="60" height="40" rx="3" fill="#5B4FA0" opacity="0.85"/>
+          <text x="290" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">ربات</text>
+          <text x="290" y="290" text-anchor="middle" fill="#7A7A78" font-size="8" font-family="Vazirmatn">(افزودنی)</text>
 
+          <!-- C -->
           <rect x="370" y="120" width="80" height="40" rx="0" fill="#2C5282" opacity="0.45"/>
           <text x="410" y="145" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">CRM</text>
           <rect x="370" y="160" width="80" height="40" rx="0" fill="#2C5282" opacity="0.55"/>
@@ -146,28 +158,22 @@
           <rect x="370" y="240" width="80" height="40" rx="3" fill="#2C5282" opacity="0.85"/>
           <text x="410" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">وب‌سایت</text>
 
-          <rect x="500" y="240" width="60" height="40" rx="3" fill="#5B4FA0" opacity="0.85"/>
-          <text x="530" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">ربات</text>
-          <text x="530" y="290" text-anchor="middle" fill="#7A7A78" font-size="8" font-family="Vazirmatn">(افزودنی)</text>
+          <!-- B -->
+          <rect x="500" y="200" width="80" height="40" rx="0" fill="#7C6E56" opacity="0.65"/>
+          <text x="540" y="225" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">طراحی</text>
+          <rect x="500" y="240" width="80" height="40" rx="3" fill="#7C6E56" opacity="0.85"/>
+          <text x="540" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">وب‌سایت</text>
 
-          <rect x="600" y="40" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.35"/>
-          <text x="640" y="65" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">داشبورد</text>
-          <rect x="600" y="80" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.45"/>
-          <text x="640" y="105" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">ربات</text>
-          <rect x="600" y="120" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.55"/>
-          <text x="640" y="145" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">CRM عمیق</text>
-          <rect x="600" y="160" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.65"/>
-          <text x="640" y="185" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">پنل</text>
-          <rect x="600" y="200" width="80" height="40" rx="0" fill="#1A6B4E" opacity="0.75"/>
-          <text x="640" y="225" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">طراحی</text>
-          <rect x="600" y="240" width="80" height="40" rx="3" fill="#1A6B4E" opacity="0.85"/>
-          <text x="640" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">وب‌سایت</text>
+          <!-- A — rightmost (shortest) -->
+          <rect x="630" y="240" width="80" height="40" rx="3" fill="#6B7280" opacity="0.85"/>
+          <text x="670" y="265" text-anchor="middle" fill="#fff" font-size="9" font-weight="600" font-family="Vazirmatn">وب‌سایت</text>
 
-          <text x="170" y="310" text-anchor="middle" fill="#6B7280" font-size="12" font-weight="600" font-family="Vazirmatn">A</text>
-          <text x="290" y="310" text-anchor="middle" fill="#7C6E56" font-size="12" font-weight="600" font-family="Vazirmatn">B</text>
+          <!-- Package labels — RTL order -->
+          <text x="170" y="310" text-anchor="middle" fill="#1A6B4E" font-size="12" font-weight="600" font-family="Vazirmatn">E</text>
+          <text x="290" y="310" text-anchor="middle" fill="#5B4FA0" font-size="12" font-weight="600" font-family="Vazirmatn">D</text>
           <text x="410" y="310" text-anchor="middle" fill="#2C5282" font-size="12" font-weight="600" font-family="Vazirmatn">C</text>
-          <text x="530" y="310" text-anchor="middle" fill="#5B4FA0" font-size="12" font-weight="600" font-family="Vazirmatn">D</text>
-          <text x="640" y="310" text-anchor="middle" fill="#1A6B4E" font-size="12" font-weight="600" font-family="Vazirmatn">E</text>
+          <text x="540" y="310" text-anchor="middle" fill="#7C6E56" font-size="12" font-weight="600" font-family="Vazirmatn">B</text>
+          <text x="670" y="310" text-anchor="middle" fill="#6B7280" font-size="12" font-weight="600" font-family="Vazirmatn">A</text>
         </svg>
         <div class="chart-legend">
           <div class="chart-legend__item"><div class="chart-legend__swatch" style="background:rgba(26,107,78,0.85)"></div>هسته وب‌سایت</div>
@@ -197,33 +203,39 @@
           <line x1="380" y1="20" x2="380" y2="380" stroke="#E0DFDC" stroke-width="1" stroke-dasharray="6 4"/>
           <line x1="100" y1="200" x2="760" y2="200" stroke="#E0DFDC" stroke-width="1" stroke-dasharray="6 4"/>
 
-          <text x="240" y="45" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">بردهای سریع</text>
-          <text x="570" y="45" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">سرمایه‌گذاری‌های استراتژیک</text>
-          <text x="240" y="370" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">حداقل قابل‌قبول</text>
-          <text x="570" y="370" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">بیش‌مهندسی‌شده</text>
+          <!-- Quadrant labels — swapped for RTL (left=high effort, right=low effort) -->
+          <text x="240" y="45" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">سرمایه‌گذاری‌های استراتژیک</text>
+          <text x="570" y="45" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">بردهای سریع</text>
+          <text x="240" y="370" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">بیش‌مهندسی‌شده</text>
+          <text x="570" y="370" text-anchor="middle" fill="#7A7A78" font-size="10" font-family="Vazirmatn" font-style="italic">حداقل قابل‌قبول</text>
 
           <text x="430" y="420" text-anchor="middle" fill="#4A4A48" font-size="11" font-family="Vazirmatn" font-weight="600">تلاش پیاده‌سازی (نفر-هفته) &larr;</text>
           <text x="50" y="200" text-anchor="middle" fill="#4A4A48" font-size="11" font-family="Vazirmatn" font-weight="600" transform="rotate(-90 50 200)">قابلیت ارائه‌شده &uarr;</text>
 
-          <circle cx="160" cy="340" r="20" fill="#6B7280" opacity="0.2" stroke="#6B7280" stroke-width="2"/>
-          <text x="160" y="344" text-anchor="middle" fill="#6B7280" font-size="14" font-weight="700" font-family="Vazirmatn">A</text>
-          <text x="160" y="310" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ هفته / ۱ بلوک</text>
+          <!-- A: cx 160→640 -->
+          <circle cx="640" cy="340" r="20" fill="#6B7280" opacity="0.2" stroke="#6B7280" stroke-width="2"/>
+          <text x="640" y="344" text-anchor="middle" fill="#6B7280" font-size="14" font-weight="700" font-family="Vazirmatn">A</text>
+          <text x="640" y="310" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ هفته / ۱ بلوک</text>
 
-          <circle cx="240" cy="280" r="20" fill="#7C6E56" opacity="0.2" stroke="#7C6E56" stroke-width="2"/>
-          <text x="240" y="284" text-anchor="middle" fill="#7C6E56" font-size="14" font-weight="700" font-family="Vazirmatn">B</text>
-          <text x="240" y="250" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۶ هفته / ۲ بلوک</text>
+          <!-- B: cx 240→560 -->
+          <circle cx="560" cy="280" r="20" fill="#7C6E56" opacity="0.2" stroke="#7C6E56" stroke-width="2"/>
+          <text x="560" y="284" text-anchor="middle" fill="#7C6E56" font-size="14" font-weight="700" font-family="Vazirmatn">B</text>
+          <text x="560" y="250" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۶ هفته / ۲ بلوک</text>
 
-          <circle cx="480" cy="120" r="22" fill="#2C5282" opacity="0.2" stroke="#2C5282" stroke-width="2"/>
-          <text x="480" y="124" text-anchor="middle" fill="#2C5282" font-size="14" font-weight="700" font-family="Vazirmatn">C</text>
-          <text x="480" y="90" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۱۲ هفته / ۴ بلوک</text>
+          <!-- C: cx 480→320 -->
+          <circle cx="320" cy="120" r="22" fill="#2C5282" opacity="0.2" stroke="#2C5282" stroke-width="2"/>
+          <text x="320" y="124" text-anchor="middle" fill="#2C5282" font-size="14" font-weight="700" font-family="Vazirmatn">C</text>
+          <text x="320" y="90" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۳ هفته / ۴ بلوک</text>
 
-          <circle cx="175" cy="300" r="16" fill="#5B4FA0" opacity="0.2" stroke="#5B4FA0" stroke-width="2" stroke-dasharray="4 3"/>
-          <text x="175" y="304" text-anchor="middle" fill="#5B4FA0" font-size="12" font-weight="700" font-family="Vazirmatn">D</text>
-          <text x="215" y="316" fill="#4A4A48" font-size="8" font-family="Vazirmatn">(افزودنی)</text>
+          <!-- D: cx 175→625 -->
+          <circle cx="625" cy="300" r="16" fill="#5B4FA0" opacity="0.2" stroke="#5B4FA0" stroke-width="2" stroke-dasharray="4 3"/>
+          <text x="625" y="304" text-anchor="middle" fill="#5B4FA0" font-size="12" font-weight="700" font-family="Vazirmatn">D</text>
+          <text x="625" y="324" text-anchor="middle" fill="#4A4A48" font-size="8" font-family="Vazirmatn">(افزودنی)</text>
 
-          <circle cx="640" cy="60" r="26" fill="#1A6B4E" opacity="0.2" stroke="#1A6B4E" stroke-width="2.5"/>
-          <text x="640" y="64" text-anchor="middle" fill="#1A6B4E" font-size="16" font-weight="700" font-family="Vazirmatn">E</text>
-          <text x="640" y="32" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۱۷ هفته / ۶ بلوک</text>
+          <!-- E: cx 640→160 -->
+          <circle cx="160" cy="60" r="26" fill="#1A6B4E" opacity="0.2" stroke="#1A6B4E" stroke-width="2.5"/>
+          <text x="160" y="64" text-anchor="middle" fill="#1A6B4E" font-size="16" font-weight="700" font-family="Vazirmatn">E</text>
+          <text x="160" y="32" text-anchor="middle" fill="#4A4A48" font-size="9" font-family="Vazirmatn">~۵ هفته / ۶ بلوک</text>
         </svg>
         <div class="chart-container__takeaway">
           <strong>نکته کلیدی:</strong> هیچ پکیجی در ناحیه «بیش‌مهندسی‌شده» قرار نمی‌گیرد. A و B شروع سریع با
@@ -305,7 +317,7 @@
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در فوریه ۲۰۲۶</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
