--- a/package-d.html
+++ b/package-d.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -87,36 +87,41 @@
         <div class="diagram-block">
           <div class="diagram-block__title">جریان افزودن محصول از طریق تلگرام</div>
           <svg class="chart-svg" viewBox="0 0 700 200">
-            <rect x="10" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
-            <text x="60" y="97" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">/addproduct</text>
-            <text x="60" y="115" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">دستور شروع</text>
+            <!-- /addproduct — rightmost (first step in RTL) -->
+            <rect x="590" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
+            <text x="640" y="97" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">/addproduct</text>
+            <text x="640" y="115" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">دستور شروع</text>
 
-            <line x1="115" y1="100" x2="145" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
+            <line x1="585" y1="100" x2="555" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
 
-            <rect x="150" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
-            <text x="200" y="97" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">وارد کردن نام</text>
-            <text x="200" y="115" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">ربات درخواست می‌کند</text>
+            <!-- وارد کردن نام -->
+            <rect x="450" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
+            <text x="500" y="97" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">وارد کردن نام</text>
+            <text x="500" y="115" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">ربات درخواست می‌کند</text>
 
-            <line x1="255" y1="100" x2="285" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
+            <line x1="445" y1="100" x2="415" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
 
-            <rect x="290" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
-            <text x="340" y="92" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">انتخاب</text>
-            <text x="340" y="107" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">دسته‌بندی</text>
-            <text x="340" y="122" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">دکمه‌های اینلاین</text>
+            <!-- انتخاب دسته‌بندی -->
+            <rect x="310" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
+            <text x="360" y="92" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">انتخاب</text>
+            <text x="360" y="107" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">دسته‌بندی</text>
+            <text x="360" y="122" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">دکمه‌های اینلاین</text>
 
-            <line x1="395" y1="100" x2="425" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
+            <line x1="305" y1="100" x2="275" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
 
-            <rect x="430" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
-            <text x="480" y="92" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">افزودن مشخصات</text>
-            <text x="480" y="107" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">+ قیمت</text>
-            <text x="480" y="122" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">ورود هدایت‌شده</text>
+            <!-- افزودن مشخصات + قیمت -->
+            <rect x="170" y="70" width="100" height="60" rx="6" fill="#5B4FA0" opacity="0.15" stroke="#5B4FA0" stroke-width="1.5"/>
+            <text x="220" y="92" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">افزودن مشخصات</text>
+            <text x="220" y="107" text-anchor="middle" fill="#5B4FA0" font-size="11" font-weight="600" font-family="Vazirmatn">+ قیمت</text>
+            <text x="220" y="122" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">ورود هدایت‌شده</text>
 
-            <line x1="535" y1="100" x2="565" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
+            <line x1="165" y1="100" x2="135" y2="100" stroke="#5B4FA0" stroke-width="1.5" marker-end="url(#arrowD)"/>
 
-            <rect x="570" y="70" width="110" height="60" rx="6" fill="#1A6B4E" opacity="0.15" stroke="#1A6B4E" stroke-width="1.5"/>
-            <text x="625" y="92" text-anchor="middle" fill="#1A6B4E" font-size="11" font-weight="700" font-family="Vazirmatn">منتشر شد</text>
-            <text x="625" y="107" text-anchor="middle" fill="#1A6B4E" font-size="11" font-weight="600" font-family="Vazirmatn">در وب‌سایت</text>
-            <text x="625" y="122" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">تأیید ارسال شد</text>
+            <!-- منتشر شد — leftmost (final step) -->
+            <rect x="20" y="70" width="110" height="60" rx="6" fill="#1A6B4E" opacity="0.15" stroke="#1A6B4E" stroke-width="1.5"/>
+            <text x="75" y="92" text-anchor="middle" fill="#1A6B4E" font-size="11" font-weight="700" font-family="Vazirmatn">منتشر شد</text>
+            <text x="75" y="107" text-anchor="middle" fill="#1A6B4E" font-size="11" font-weight="600" font-family="Vazirmatn">در وب‌سایت</text>
+            <text x="75" y="122" text-anchor="middle" fill="#7A7A78" font-size="9" font-family="Vazirmatn">تأیید ارسال شد</text>
 
             <defs><marker id="arrowD" viewBox="0 0 10 10" refX="10" refY="5" markerWidth="6" markerHeight="6" orient="auto"><path d="M 0 0 L 10 5 L 0 10 z" fill="#5B4FA0"/></marker></defs>
           </svg>
@@ -127,15 +132,15 @@
       <div class="mt-l" data-animate>
         <h3>مراحل تحویل</h3>
         <ul class="phase-timeline">
-          <li><span class="phase-name">نیازسنجی و طراحی جریان ربات</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
-          <li><span class="phase-name">توسعه نقاط پایانی API (در صورت نیاز)</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
-          <li><span class="phase-name">توسعه ربات</span><br><span class="phase-duration">۵ تا ۷ روز</span></li>
-          <li><span class="phase-name">احراز هویت و امنیت</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
-          <li><span class="phase-name">تست با تیم مشتری</span><br><span class="phase-duration">۳ تا ۵ روز</span></li>
-          <li><span class="phase-name">مستندسازی و آموزش</span><br><span class="phase-duration">۱ تا ۲ روز</span></li>
+          <li><span class="phase-name">نیازسنجی و طراحی جریان ربات</span><br><span class="phase-duration">نیم روز</span></li>
+          <li><span class="phase-name">توسعه نقاط پایانی API (در صورت نیاز)</span><br><span class="phase-duration">نیم روز</span></li>
+          <li><span class="phase-name">توسعه ربات</span><br><span class="phase-duration">۲ تا ۳ روز</span></li>
+          <li><span class="phase-name">احراز هویت و امنیت</span><br><span class="phase-duration">نیم روز</span></li>
+          <li><span class="phase-name">تست با تیم مشتری</span><br><span class="phase-duration">۱ تا ۲ روز</span></li>
+          <li><span class="phase-name">مستندسازی و آموزش</span><br><span class="phase-duration">نیم روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">۳–۴</div><div class="stat-item__label">هفته مجموعاً (موازی با C/E یا پس از آن)</div></div>
+          <div class="stat-item"><div class="stat-item__value">+۱</div><div class="stat-item__label">هفته (افزونه برای C/E)</div></div>
         </div>
       </div>
 
@@ -165,7 +170,7 @@
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در فوریه ۲۰۲۶</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
