--- a/risks.html
+++ b/risks.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -35,60 +35,65 @@
         </div>
 
         <svg viewBox="0 0 700 500" style="width:100%;max-width:700px;font-family:Vazirmatn,sans-serif;" class="chart-svg">
-          <rect x="100" y="320" width="180" height="160" fill="#E8F5E9" rx="0"/>
+          <!-- Grid rects — RTL: high probability LEFT, low probability RIGHT -->
+          <!-- Column 1 (x=100-280): High probability -->
+          <rect x="100" y="320" width="180" height="160" fill="#FFF3E0" rx="0"/>
+          <rect x="100" y="160" width="180" height="160" fill="#FFEBEE" rx="0"/>
+          <rect x="100" y="20" width="180" height="140" fill="#FCE4EC" rx="0"/>
+          <!-- Column 2 (x=280-460): Medium probability -->
           <rect x="280" y="320" width="180" height="160" fill="#FFF8E1" rx="0"/>
-          <rect x="100" y="160" width="180" height="160" fill="#FFF8E1" rx="0"/>
-          <rect x="460" y="320" width="180" height="160" fill="#FFF3E0" rx="0"/>
           <rect x="280" y="160" width="180" height="160" fill="#FFF3E0" rx="0"/>
-          <rect x="100" y="20" width="180" height="140" fill="#FFF3E0" rx="0"/>
-          <rect x="460" y="160" width="180" height="160" fill="#FFEBEE" rx="0"/>
           <rect x="280" y="20" width="180" height="140" fill="#FFEBEE" rx="0"/>
-          <rect x="460" y="20" width="180" height="140" fill="#FCE4EC" rx="0"/>
+          <!-- Column 3 (x=460-640): Low probability -->
+          <rect x="460" y="320" width="180" height="160" fill="#E8F5E9" rx="0"/>
+          <rect x="460" y="160" width="180" height="160" fill="#FFF8E1" rx="0"/>
+          <rect x="460" y="20" width="180" height="140" fill="#FFF3E0" rx="0"/>
 
           <line x1="100" y1="160" x2="640" y2="160" stroke="#D4D0C8" stroke-width="0.5"/>
           <line x1="100" y1="320" x2="640" y2="320" stroke="#D4D0C8" stroke-width="0.5"/>
           <line x1="280" y1="20" x2="280" y2="480" stroke="#D4D0C8" stroke-width="0.5"/>
           <line x1="460" y1="20" x2="460" y2="480" stroke="#D4D0C8" stroke-width="0.5"/>
 
-          <text x="370" y="498" text-anchor="middle" fill="#4A4A48" font-size="11" font-weight="600">احتمال &larr;</text>
-          <text x="40" y="250" text-anchor="middle" fill="#4A4A48" font-size="11" font-weight="600" transform="rotate(-90 40 250)">تأثیر &uarr;</text>
-          <text x="190" y="492" text-anchor="middle" fill="#7A7A78" font-size="9">کم</text>
+          <!-- Axis labels — RTL: Y-axis on RIGHT, X-axis: بالا left, کم right -->
+          <text x="370" y="498" text-anchor="middle" fill="#4A4A48" font-size="11" font-weight="600">&rarr; احتمال</text>
+          <text x="660" y="250" text-anchor="middle" fill="#4A4A48" font-size="11" font-weight="600" transform="rotate(-90 660 250)">تأثیر &uarr;</text>
+          <text x="190" y="492" text-anchor="middle" fill="#7A7A78" font-size="9">بالا</text>
           <text x="370" y="492" text-anchor="middle" fill="#7A7A78" font-size="9">متوسط</text>
-          <text x="550" y="492" text-anchor="middle" fill="#7A7A78" font-size="9">بالا</text>
-          <text x="90" y="400" text-anchor="end" fill="#7A7A78" font-size="9">کم</text>
-          <text x="90" y="240" text-anchor="end" fill="#7A7A78" font-size="9">متوسط</text>
-          <text x="90" y="90" text-anchor="end" fill="#7A7A78" font-size="9">بالا</text>
+          <text x="550" y="492" text-anchor="middle" fill="#7A7A78" font-size="9">کم</text>
+          <text x="650" y="400" text-anchor="start" fill="#7A7A78" font-size="9">کم</text>
+          <text x="650" y="240" text-anchor="start" fill="#7A7A78" font-size="9">متوسط</text>
+          <text x="650" y="90" text-anchor="start" fill="#7A7A78" font-size="9">بالا</text>
 
-          <!-- Risk dots -->
-          <circle cx="520" cy="240" r="18" fill="#6B7280" opacity="0.25" stroke="#6B7280" stroke-width="2"/>
-          <text x="520" y="244" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R1</text>
+          <!-- Risk dots — mirrored x: new_cx = 740 - old_cx -->
+          <circle cx="220" cy="240" r="18" fill="#6B7280" opacity="0.25" stroke="#6B7280" stroke-width="2"/>
+          <text x="220" y="244" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R1</text>
 
-          <circle cx="360" cy="220" r="16" fill="#6B7280" opacity="0.25" stroke="#6B7280" stroke-width="2"/>
-          <text x="360" y="224" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R2</text>
+          <circle cx="380" cy="220" r="16" fill="#6B7280" opacity="0.25" stroke="#6B7280" stroke-width="2"/>
+          <text x="380" y="224" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R2</text>
 
-          <circle cx="530" cy="80" r="20" fill="#C53030" opacity="0.2" stroke="#C53030" stroke-width="2"/>
-          <text x="530" y="84" text-anchor="middle" fill="#C53030" font-size="9" font-weight="700">R3</text>
+          <circle cx="210" cy="80" r="20" fill="#C53030" opacity="0.2" stroke="#C53030" stroke-width="2"/>
+          <text x="210" y="84" text-anchor="middle" fill="#C53030" font-size="9" font-weight="700">R3</text>
 
-          <circle cx="340" cy="260" r="16" fill="#2C5282" opacity="0.25" stroke="#2C5282" stroke-width="2"/>
-          <text x="340" y="264" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R4</text>
+          <circle cx="400" cy="260" r="16" fill="#2C5282" opacity="0.25" stroke="#2C5282" stroke-width="2"/>
+          <text x="400" y="264" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R4</text>
 
-          <circle cx="180" cy="400" r="14" fill="#5B4FA0" opacity="0.25" stroke="#5B4FA0" stroke-width="2"/>
-          <text x="180" y="404" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R5</text>
+          <circle cx="560" cy="400" r="14" fill="#5B4FA0" opacity="0.25" stroke="#5B4FA0" stroke-width="2"/>
+          <text x="560" y="404" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R5</text>
 
-          <circle cx="380" cy="80" r="18" fill="#2C5282" opacity="0.25" stroke="#2C5282" stroke-width="2"/>
-          <text x="380" y="84" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R6</text>
+          <circle cx="360" cy="80" r="18" fill="#2C5282" opacity="0.25" stroke="#2C5282" stroke-width="2"/>
+          <text x="360" y="84" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R6</text>
 
-          <circle cx="200" cy="100" r="16" fill="#7C6E56" opacity="0.25" stroke="#7C6E56" stroke-width="2"/>
-          <text x="200" y="104" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R7</text>
+          <circle cx="540" cy="100" r="16" fill="#7C6E56" opacity="0.25" stroke="#7C6E56" stroke-width="2"/>
+          <text x="540" y="104" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R7</text>
 
-          <circle cx="390" cy="200" r="16" fill="#6B7280" opacity="0.25" stroke="#6B7280" stroke-width="2"/>
-          <text x="390" y="204" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R8</text>
+          <circle cx="350" cy="200" r="16" fill="#6B7280" opacity="0.25" stroke="#6B7280" stroke-width="2"/>
+          <text x="350" y="204" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R8</text>
 
-          <circle cx="500" cy="400" r="15" fill="#7C6E56" opacity="0.25" stroke="#7C6E56" stroke-width="2"/>
-          <text x="500" y="404" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R9</text>
+          <circle cx="240" cy="400" r="15" fill="#7C6E56" opacity="0.25" stroke="#7C6E56" stroke-width="2"/>
+          <text x="240" y="404" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R9</text>
 
-          <circle cx="160" cy="70" r="16" fill="#1A6B4E" opacity="0.25" stroke="#1A6B4E" stroke-width="2"/>
-          <text x="160" y="74" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R10</text>
+          <circle cx="580" cy="70" r="16" fill="#1A6B4E" opacity="0.25" stroke="#1A6B4E" stroke-width="2"/>
+          <text x="580" y="74" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="700">R10</text>
 
           <rect x="100" y="20" width="540" height="460" fill="none" stroke="#D4D0C8" stroke-width="1.5" rx="0"/>
         </svg>
@@ -247,7 +252,7 @@
     </div>
   </section>
 
-  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در بهمن ۱۴۰۴</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
+  <footer class="section" style="padding: var(--space-xl) 0; border-top: 1px solid var(--color-border-light);"><div class="container"><div class="flex flex--between flex--center flex--wrap flex--gap-s"><p class="caption" style="margin:0;">پیشنهاد تهیه شده در فوریه ۲۰۲۶</p><p class="caption" style="margin:0;">نسخه ۱.۰</p></div></div></footer>
   <script src="js/main.js"></script>
 </body>
 </html>
