fix: compress package B timeline from 5-7 weeks to 2-3 weeks to match others

--- a/timeline.html
+++ b/timeline.html
@@ -72,28 +72,28 @@
           <polygon points="705,52 697,52 701,42" fill="#6B7280"/>
           <text x="701" y="94" text-anchor="middle" fill="#6B7280" font-size="7" font-weight="600" font-family="Vazirmatn">انتشار</text>
 
-          <!-- === PACKAGE B LANE === (5-7 weeks) -->
+          <!-- === PACKAGE B LANE === (2-3 weeks) -->
           <rect x="0" y="100" width="900" height="85" fill="#FAFAF8" rx="0"/>
           <text x="845" y="135" text-anchor="middle" fill="#7C6E56" font-size="14" font-weight="700">B</text>
           <text x="845" y="150" text-anchor="middle" fill="#7A7A78" font-size="8" font-family="Vazirmatn">WP + سفارشی</text>
-          <!-- Discovery wk1 -->
+          <!-- Discovery 1-2d -->
           <rect x="755" y="112" width="35" height="20" rx="3" fill="#7C6E56" opacity="0.3"/>
           <text x="772" y="126" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">کشف</text>
-          <!-- Design wk1-2 -->
-          <rect x="685" y="112" width="70" height="20" rx="3" fill="#7C6E56" opacity="0.5"/>
-          <text x="720" y="126" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">طراحی</text>
-          <!-- Build wk2-4 -->
-          <rect x="600" y="138" width="100" height="20" rx="3" fill="#7C6E56" opacity="0.7"/>
-          <text x="650" y="152" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">ساخت</text>
-          <!-- Content wk4-5 -->
-          <rect x="510" y="112" width="60" height="20" rx="3" fill="#7C6E56" opacity="0.4"/>
-          <text x="540" y="126" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">محتوا</text>
-          <!-- Test wk5-6 -->
-          <rect x="480" y="138" width="55" height="20" rx="3" fill="#7C6E56" opacity="0.6"/>
-          <text x="507" y="152" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">تست</text>
-          <!-- Launch marker ~week 6-7 -->
-          <polygon points="430,130 422,130 426,120" fill="#7C6E56"/>
-          <text x="426" y="172" text-anchor="middle" fill="#7C6E56" font-size="7" font-weight="600" font-family="Vazirmatn">انتشار</text>
+          <!-- Design 2-3d -->
+          <rect x="710" y="138" width="55" height="20" rx="3" fill="#7C6E56" opacity="0.5"/>
+          <text x="737" y="152" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">طراحی</text>
+          <!-- Build 3-4d -->
+          <rect x="665" y="112" width="55" height="20" rx="3" fill="#7C6E56" opacity="0.7"/>
+          <text x="692" y="126" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">ساخت</text>
+          <!-- Content 2d parallel -->
+          <rect x="680" y="138" width="30" height="16" rx="3" fill="#7C6E56" opacity="0.4"/>
+          <text x="695" y="149" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">محتوا</text>
+          <!-- Test 1-2d -->
+          <rect x="640" y="112" width="30" height="20" rx="3" fill="#7C6E56" opacity="0.6"/>
+          <text x="655" y="126" text-anchor="middle" fill="#fff" font-size="7" font-weight="500" font-family="Vazirmatn">تست</text>
+          <!-- Launch marker ~week 2-3 -->
+          <polygon points="635,130 627,130 631,120" fill="#7C6E56"/>
+          <text x="631" y="172" text-anchor="middle" fill="#7C6E56" font-size="7" font-weight="600" font-family="Vazirmatn">انتشار</text>
 
           <!-- === PACKAGE C LANE === (3-4 weeks) -->
           <rect x="0" y="185" width="900" height="100" fill="#F5F4F0" rx="0"/>
@@ -185,7 +185,7 @@
           <rect x="0" y="480" width="900" height="40" fill="#FAFAF8"/>
           <text x="845" y="505" text-anchor="middle" fill="#4A4A48" font-size="9" font-weight="600" font-family="Vazirmatn">مجموع</text>
           <text x="720" y="505" text-anchor="middle" fill="#6B7280" font-size="9" font-weight="600" font-family="Vazirmatn">۲-۳ هفته</text>
-          <text x="530" y="505" text-anchor="middle" fill="#7C6E56" font-size="9" font-weight="600" font-family="Vazirmatn">۵-۷ هفته</text>
+          <text x="640" y="505" text-anchor="middle" fill="#7C6E56" font-size="9" font-weight="600" font-family="Vazirmatn">۲-۳ هفته</text>
           <text x="600" y="505" text-anchor="middle" fill="#2C5282" font-size="9" font-weight="600" font-family="Vazirmatn">۳-۴ هفته</text>
           <text x="670" y="505" text-anchor="middle" fill="#5B4FA0" font-size="9" font-weight="600" font-family="Vazirmatn">+۱ هفته</text>
           <text x="400" y="505" text-anchor="middle" fill="#1A6B4E" font-size="9" font-weight="600" font-family="Vazirmatn">۴-۵ هفته</text>
@@ -238,12 +238,12 @@
             </thead>
             <tbody>
               <tr><td>تأیید نیازمندی‌ها</td><td>ه۱</td><td>ه۱</td><td>ه۱</td><td>ه۱</td></tr>
-              <tr><td>تأیید طراحی</td><td>ندارد</td><td>ه۳</td><td>ه۱</td><td>ه۱</td></tr>
-              <tr><td>بازبینی آلفا (ویژگی‌های اصلی)</td><td>ندارد</td><td>ه۵</td><td>ه۲</td><td>ه۳</td></tr>
-              <tr><td>تأیید محتوا</td><td>ه۲</td><td>ه۶</td><td>ه۳</td><td>ه۳</td></tr>
+              <tr><td>تأیید طراحی</td><td>ندارد</td><td>ه۱</td><td>ه۱</td><td>ه۱</td></tr>
+              <tr><td>بازبینی آلفا (ویژگی‌های اصلی)</td><td>ندارد</td><td>ه۲</td><td>ه۲</td><td>ه۳</td></tr>
+              <tr><td>تأیید محتوا</td><td>ه۲</td><td>ه۲</td><td>ه۳</td><td>ه۳</td></tr>
               <tr><td>تأیید یکپارچه‌سازی CRM</td><td>ندارد</td><td>ندارد</td><td>ه۳</td><td>ه۴</td></tr>
-              <tr><td>تأیید استیجینگ</td><td>ه۲</td><td>ه۶</td><td>ه۴</td><td>ه۴</td></tr>
-              <tr><td>تأیید راه‌اندازی</td><td>ه۳</td><td>ه۷</td><td>ه۴</td><td>ه۵</td></tr>
+              <tr><td>تأیید استیجینگ</td><td>ه۲</td><td>ه۳</td><td>ه۴</td><td>ه۴</td></tr>
+              <tr><td>تأیید راه‌اندازی</td><td>ه۳</td><td>ه۳</td><td>ه۴</td><td>ه۵</td></tr>
             </tbody>
           </table>
         </div>
