--- a/package-b.html
+++ b/package-b.html
@@ -75,7 +75,7 @@
           <table>
             <thead><tr><th>آنچه به دست می‌آورید</th><th>آنچه می‌پذیرید</th></tr></thead>
             <tbody>
-              <tr><td class="gain">طراحی برنددار منحصربه‌فرد</td><td class="accept">چرخه طراحی/ساخت طولانی‌تر (۵ تا ۷ هفته)</td></tr>
+              <tr><td class="gain">طراحی برنددار منحصربه‌فرد</td><td class="accept">چرخه طراحی/ساخت طولانی‌تر (۲ تا ۳ هفته)</td></tr>
               <tr><td class="gain">کنترل بر هویت بصری</td><td class="accept">هزینه اولیه بالاتر از A</td></tr>
               <tr><td class="gain">مرور بهتر محصول (فیلتر، دسته‌بندی)</td><td class="accept">همچنان مدیریت دستی محصول</td></tr>
               <tr><td class="gain">بدون وابستگی به سازنده قالب</td><td class="accept">قالب سفارشی برای تغییرات ساختاری نیاز به توسعه‌دهنده دارد</td></tr>
@@ -88,16 +88,16 @@
       <div class="mt-l" data-animate>
         <h3>مراحل تحویل</h3>
         <ul class="phase-timeline">
-          <li><span class="phase-name">کشف و نیازسنجی</span><br><span class="phase-duration">۳ تا ۵ روز</span></li>
-          <li><span class="phase-name">طراحی وایرفریم</span><br><span class="phase-duration">۵ تا ۷ روز</span></li>
-          <li><span class="phase-name">طراحی بصری + بازبینی مشتری</span><br><span class="phase-duration">۵ تا ۷ روز (۲ دور بازبینی)</span></li>
-          <li><span class="phase-name">توسعه قالب</span><br><span class="phase-duration">۷ تا ۱۰ روز</span></li>
-          <li><span class="phase-name">ورود محتوا و داده محصول</span><br><span class="phase-duration">۵ تا ۷ روز (وابسته به آمادگی داده)</span></li>
-          <li><span class="phase-name">تضمین کیفیت و بازبینی</span><br><span class="phase-duration">۳ تا ۵ روز</span></li>
+          <li><span class="phase-name">کشف و نیازسنجی</span><br><span class="phase-duration">۱ تا ۲ روز</span></li>
+          <li><span class="phase-name">طراحی وایرفریم</span><br><span class="phase-duration">۲ روز</span></li>
+          <li><span class="phase-name">طراحی بصری + بازبینی مشتری</span><br><span class="phase-duration">۲ تا ۳ روز (۲ دور بازبینی)</span></li>
+          <li><span class="phase-name">توسعه قالب</span><br><span class="phase-duration">۳ تا ۴ روز</span></li>
+          <li><span class="phase-name">ورود محتوا و داده محصول</span><br><span class="phase-duration">۲ روز (وابسته به آمادگی داده)</span></li>
+          <li><span class="phase-name">تضمین کیفیت و بازبینی</span><br><span class="phase-duration">۱ تا ۲ روز</span></li>
           <li><span class="phase-name">راه‌اندازی</span><br><span class="phase-duration">۱ روز</span></li>
         </ul>
         <div class="stat-row mt-m">
-          <div class="stat-item"><div class="stat-item__value">۵–۷</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۲–۳</div><div class="stat-item__label">هفته مجموعاً</div></div>
         </div>
       </div>
 
