feat: add AED pricing across all pages (A=3500, B=5500, C=7000, D=3500, E=9000)

--- a/next-steps.html
+++ b/next-steps.html
@@ -32,37 +32,42 @@
         <div class="comparison-wrap mt-m">
           <table class="comparison-table" style="min-width:500px;">
             <thead>
-              <tr><th>پکیج</th><th>آنچه دریافت می‌کنید</th><th>زمان‌بندی</th><th>مناسب برای</th></tr>
+              <tr><th>پکیج</th><th>آنچه دریافت می‌کنید</th><th>زمان‌بندی</th><th>قیمت</th><th>مناسب برای</th></tr>
             </thead>
             <tbody>
               <tr>
                 <td><strong style="color:var(--color-pkg-a)">A</strong></td>
                 <td>سایت وردپرسی با قالب آماده</td>
                 <td>۲ تا ۳ هفته</td>
+                <td>۳,۵۰۰ درهم</td>
                 <td>نیاز سریع به حضور آنلاین، بودجه محدود</td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-b)">B</strong></td>
                 <td>سایت وردپرسی با طراحی سفارشی</td>
                 <td>۲ تا ۳ هفته</td>
+                <td>۵,۵۰۰ درهم</td>
                 <td>نیاز به تمایز برند، آمادگی سرمایه‌گذاری در طراحی</td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-c)">C</strong></td>
                 <td>وب‌سایت سفارشی + یکپارچه‌سازی CRM</td>
                 <td>۳ تا ۴ هفته</td>
+                <td>۷,۰۰۰ درهم</td>
                 <td>نیاز به کاتالوگ حرفه‌ای با مدیریت سرنخ</td></td>
               </tr>
               <tr>
                 <td><strong style="color:var(--color-pkg-d)">D</strong></td>
                 <td>ربات تلگرام (افزونه C یا E)</td>
                 <td>+ ۱ هفته</td>
+                <td>۳,۵۰۰ درهم</td>
                 <td>تیم فروش محصولات را از موبایل مدیریت کند</td></td>
               </tr>
               <tr style="background:var(--color-pkg-e-light);">
                 <td><strong style="color:var(--color-pkg-e)">E</strong></td>
                 <td>اکوسیستم کامل: وب‌سایت + CRM + ربات + داشبورد</td>
                 <td>۴ تا ۵ هفته</td>
+                <td>۹,۰۰۰ درهم</td>
                 <td>ساخت برای مقیاس، عملیات یکپارچه، بلندمدت</td></td>
               </tr>
             </tbody>
