--- a/package-a.html
+++ b/package-a.html
@@ -97,6 +97,10 @@
             <div class="stat-item__value">۲–۳</div>
             <div class="stat-item__label">هفته مجموعاً</div>
           </div>
+          <div class="stat-item">
+            <div class="stat-item__value">۳,۵۰۰</div>
+            <div class="stat-item__label">درهم</div>
+          </div>
         </div>
       </div>
 
