--- a/package-c.html
+++ b/package-c.html
@@ -103,6 +103,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">۳–۴</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۷,۰۰۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
