--- a/package-e.html
+++ b/package-e.html
@@ -128,6 +128,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">۴–۵</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۹,۰۰۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
