--- a/packages.html
+++ b/packages.html
@@ -132,31 +132,31 @@
         <a href="package-a.html" class="card card--pkg card--pkg-a" style="text-decoration:none;">
           <div class="card__letter">A</div>
           <h5 class="card__title">وردپرس + قالب آماده</h5>
-          <p class="card__subtitle">۲ تا ۳ هفته &middot; تا ۱۰۰ محصول</p>
+          <p class="card__subtitle">۲ تا ۳ هفته &middot; تا ۱۰۰ محصول &middot; ۳,۵۰۰ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-b.html" class="card card--pkg card--pkg-b" style="text-decoration:none;">
           <div class="card__letter">B</div>
           <h5 class="card__title">وردپرس + رابط سفارشی</h5>
-          <p class="card__subtitle">۲ تا ۳ هفته &middot; تا ۲۰۰ محصول</p>
+          <p class="card__subtitle">۲ تا ۳ هفته &middot; تا ۲۰۰ محصول &middot; ۵,۵۰۰ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-c.html" class="card card--pkg card--pkg-c" style="text-decoration:none;">
           <div class="card__letter">C</div>
           <h5 class="card__title">کدنویسی سفارشی + CRM</h5>
-          <p class="card__subtitle">۳ تا ۴ هفته &middot; تا ۵۰۰ محصول</p>
+          <p class="card__subtitle">۳ تا ۴ هفته &middot; تا ۵۰۰ محصول &middot; ۷,۰۰۰ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-d.html" class="card card--pkg card--pkg-d" style="text-decoration:none;">
           <div class="card__letter">D</div>
           <h5 class="card__title">ربات تلگرام</h5>
-          <p class="card__subtitle">+ ۱ هفته &middot; افزونه برای C/E</p>
+          <p class="card__subtitle">+ ۱ هفته &middot; افزونه برای C/E &middot; ۳,۵۰۰ درهم</p>
           <div class="card__footer"><span class="btn btn--ghost" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
         <a href="package-e.html" class="card card--pkg card--pkg-e card--highlight" style="text-decoration:none;">
           <div class="card__letter">E</div>
           <h5 class="card__title">اکوسیستم کامل</h5>
-          <p class="card__subtitle">۴ تا ۵ هفته &middot; تا ۱۰۰۰ محصول</p>
+          <p class="card__subtitle">۴ تا ۵ هفته &middot; تا ۱۰۰۰ محصول &middot; ۹,۰۰۰ درهم</p>
           <div class="card__footer"><span class="btn btn--primary" style="width:100%;justify-content:center;">مشاهده جزئیات</span></div>
         </a>
       </div>
