--- a/package-b.html
+++ b/package-b.html
@@ -98,6 +98,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">۲–۳</div><div class="stat-item__label">هفته مجموعاً</div></div>
+          <div class="stat-item"><div class="stat-item__value">۵,۵۰۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
