--- a/package-d.html
+++ b/package-d.html
@@ -141,6 +141,7 @@
         </ul>
         <div class="stat-row mt-m">
           <div class="stat-item"><div class="stat-item__value">+۱</div><div class="stat-item__label">هفته (افزونه برای C/E)</div></div>
+          <div class="stat-item"><div class="stat-item__value">۳,۵۰۰</div><div class="stat-item__label">درهم</div></div>
         </div>
       </div>
 
